# dr_clients

./: .gitignore  CMakeLists.txt  README.md  call_trace.c  get_trace.sh  handle.c  msghandler.c  msghandler.h  trace_handle.py  utils.c
examples/fibonacci/: communicate.txt  fibonacci.cpp
examples/fibonacci/trace/: valid_files.txt
